[tool.poetry]
name = "secrets-sharer"
version = "0.1.0"
description = ""
authors = ["Junior <wpajunior@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"
aioredis = "^1.3.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
flake8 = "^3.8.4"
requests = "^2.25.1"
asgi-lifespan = "^1.0.1"
rope = "^0.18.0"
mypy = "^0.800"
pytest-cov = "^2.11.1"
isort = "^5.7.0"
autoflake = "^1.4"
black = "^20.8b1"
pre-commit = "^2.10.1"
Faker = "^6.5.0"

[tool.isort]
profile = "black"
src_paths = ["app", "tests"]
combine_as_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
